--- a/9th pgm/index.html
+++ b/9th pgm/index.html
@@ -44,7 +44,7 @@
 <body style="margin-left: 600px; margin-top: 250px;">
   <h1>Registration Page</h1><br/>
   <form name="registrationForm" onsubmit="return validateForm()" method="post">
-    <label for="userId">User ID:&ensp;</label>
+    <label for="userI">User ID:&ensp;</label>
     <input type="text" id="userId" name="userId"><br><br>
     
     <label for="name">Name:&ensp;&ensp;&nbsp;</label>
