--- a/1st pgm/sample.html
+++ b/1st pgm/sample.html
@@ -43,7 +43,7 @@
             }
         </style>
     </head>
-    <body style="background-image: url(./download.jpg); background-repeat: no-repeat; background-size: 1800px 1400px; color: white;">
+    <body style="background-image: linear-gradient(rgba(0,0,0,0.6),  rgba(0,0,0,0.6)),url(./download.jpg); background-repeat: no-repeat; background-size: 1800px 1400px; color: white;">
         <header style="text-align: center;">   
             <p>JSS MAHAVIDYAPEETHA</p>
             <p id="hii">JSS SCIENCE AND TECHNOLOGY UNIVERSITY</p>
